Fix overflowing height
Previously, the body block margin and the overflowing margin collapse of
the header were making the body scrollable when the content was not over
a page long.

--- a/styling.css
+++ b/styling.css
@@ -1,8 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inconsolata&display=swap");
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   background-color: rgb(24, 26, 27);
+  padding-block: 1px;
+  margin-block: 0;
 }
 .stuff {
   text-align: center;
